@@ -9,7 +9,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX README Files</i></font></big></h1>
-      <p>Last Updated: February 27, 2010</p>
+      <p>Last Updated: March 5, 2010</p>
     </td>
   </tr>
 </table>
@@ -38,6 +38,11 @@
  |   |   |   |-<a href="arch/sh/src/m16c/README.txt?view=log">m16c/README.txt</a>
  |   |   |   |-<a href="arch/sh/src/sh1/README.txt?view=log">sh1/README.txt</a>
  |   |   |   `-<a href="arch/sh/src/README.txt?view=log">README.txt</a>
+ |   |- x86/
+ |   |   |- include/
+ |   |   |   `-<a href="arch/x86/include/README.txt?view=log">README.txt</a>
+ |   |   `- src/
+ |   |       `-<a href="arch/x86/src/README.txt?view=log">README.txt</a>
  |   `- z80/
  |   |   `- src/
  |   |       `- <a href="arch/z80/src/z80/README.txt?view=log">z80/README.txt</a>
@@ -111,6 +116,10 @@
  |   |   |- <a href="configs/pjrc-8051/include/README.txt?view=log">include/README.txt</a>
  |   |   |- <a href="configs/pjrc-8051/src/README.txt?view=log">src/README.txt</a>
  |   |   `- <a href="configs/pjrc-8051/README.txt?view=log"><b><i>README.txt</i></b></a>
+ |   |- qemu-i486/
+ |   |   |- <a href="configs/qemu-i486/include/README.txt?view=log">include/README.txt</a>
+ |   |   |- <a href="configs/qemu-i486/src/README.txt?view=log">src/README.txt</a>
+ |   |   `- <a href="configs/qemu-i486/README.txt?view=log"><b><i>README.txt</i></b></a>
  |   |- sam3u-ek/
  |   |   `- <a href="configs/sam3u-ek/README.txt?view=log"><b><i>README.txt</i></b></a>
  |   |- sim/
